--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -17,21 +17,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import scipy.stats as st\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>412</th>\n",
+       "      <td>376</td>\n",
+       "      <td>Metagross</td>\n",
+       "      <td>Steel</td>\n",
+       "      <td>Psychic</td>\n",
+       "      <td>600</td>\n",
+       "      <td>80</td>\n",
+       "      <td>135</td>\n",
+       "      <td>130</td>\n",
+       "      <td>95</td>\n",
+       "      <td>90</td>\n",
+       "      <td>70</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>105</td>\n",
+       "      <td>Marowak</td>\n",
+       "      <td>Ground</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>425</td>\n",
+       "      <td>60</td>\n",
+       "      <td>80</td>\n",
+       "      <td>110</td>\n",
+       "      <td>50</td>\n",
+       "      <td>80</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>570</th>\n",
+       "      <td>511</td>\n",
+       "      <td>Pansage</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>316</td>\n",
+       "      <td>50</td>\n",
+       "      <td>53</td>\n",
+       "      <td>48</td>\n",
+       "      <td>53</td>\n",
+       "      <td>48</td>\n",
+       "      <td>64</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>663</th>\n",
+       "      <td>602</td>\n",
+       "      <td>Tynamo</td>\n",
+       "      <td>Electric</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>275</td>\n",
+       "      <td>35</td>\n",
+       "      <td>55</td>\n",
+       "      <td>40</td>\n",
+       "      <td>45</td>\n",
+       "      <td>40</td>\n",
+       "      <td>60</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>87</td>\n",
+       "      <td>Dewgong</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>Ice</td>\n",
+       "      <td>475</td>\n",
+       "      <td>90</td>\n",
+       "      <td>70</td>\n",
+       "      <td>80</td>\n",
+       "      <td>70</td>\n",
+       "      <td>95</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       #       Name    Type 1   Type 2  Total  HP  Attack  Defense  Sp. Atk  \\\n",
+       "412  376  Metagross     Steel  Psychic    600  80     135      130       95   \n",
+       "113  105    Marowak    Ground      NaN    425  60      80      110       50   \n",
+       "570  511    Pansage     Grass      NaN    316  50      53       48       53   \n",
+       "663  602     Tynamo  Electric      NaN    275  35      55       40       45   \n",
+       "94    87    Dewgong     Water      Ice    475  90      70       80       70   \n",
+       "\n",
+       "     Sp. Def  Speed  Generation  Legendary  \n",
+       "412       90     70           3      False  \n",
+       "113       80     45           1      False  \n",
+       "570       48     64           5      False  \n",
+       "663       40     60           5      False  \n",
+       "94        95     70           1      False  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Load the data:\n"
+    "# Load the data:\n",
+    "pokemon = pd.read_csv('Pokemon.csv')\n",
+    "pokemon.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Grass', 'Fire', 'Water', 'Bug', 'Normal', 'Poison', 'Electric', 'Ground', 'Fairy', 'Fighting', 'Psychic', 'Rock', 'Ghost', 'Ice', 'Dragon', 'Dark', 'Steel', 'Flying']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pokemon_types = list(pokemon['Type 1'].unique())\n",
+    "print(pokemon_types)"
    ]
   },
   {
@@ -58,13 +222,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Grass' 'Poison' 'Fire' nan 'Flying' 'Dragon' 'Water' 'Bug' 'Normal'\n",
+      " 'Electric' 'Ground' 'Fairy' 'Fighting' 'Psychic' 'Rock' 'Steel' 'Ice'\n",
+      " 'Ghost' 'Dark']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "\n",
-    "\n",
+    "unique_types = pd.unique(pokemon[['Type 1', 'Type 2']].values.ravel())\n",
+    "print(unique_types)\n",
     "len(unique_types) # you should see 19"
    ]
   },
@@ -85,15 +269,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pokemon_totals = []\n",
+    "for t in unique_types:\n",
+    "    # print(t, type(t), isinstance(t, str))\n",
+    "    if isinstance(t, str):\n",
+    "        t = pokemon[pokemon['Type 1'] == t]['Total']\n",
+    "        pokemon_totals.append(t)\n",
     "\n",
     "# Your code here\n",
     "\n",
-    "len(pokemon_totals) # you should see 18"
+    "len(pokemon_totals) # you should see 18\n",
+    "\n"
    ]
   },
   {
@@ -111,11 +312,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "F_onewayResult(statistic=np.float64(4.638767481660552), pvalue=np.float64(2.0772154488416256e-09))"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "st.f_oneway(*pokemon_totals)"
    ]
   },
   {
@@ -131,13 +344,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Your comment here\n",
+    "\n",
+    "# p < 0.05 i.e. reject null hypothesis i.e at least one group is different"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "3.9.2",
    "language": "python",
    "name": "python3"
   },
@@ -151,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
